# passwords

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: app.py  encrypted_seed.json  pyproject.toml  wallet.json
public/: manifest.json
src/: App.tsx  index.css  main.tsx
