[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pranavcpawar <pranavcpawar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.0"
cdp-sdk = "^0.12.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
